tests/ui/structs/default-field-values/invalid-const.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/invalid-const.rs:5:19
   |
LL |     pub bax: u8 = panic!("asdf"),
   |                   ^^^^^^^^^^^^^^ evaluation panicked: asdf
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of `Baz::<C>::bat::{constant#0}` failed
  --> $DIR/invalid-const.rs:11:19
   |
LL |     pub bat: u8 = 130 + 130,
   |                   ^^^^^^^^^ attempt to compute `130_u8 + 130_u8`, which would overflow

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
